crates/ruau/tests/compile/luau_norefunwindsafe.stderr
error[E0277]: the type `UnsafeCell<bool>` may contain interior mutability and a reference may not be safely transferable across a catch_unwind boundary
 --> tests/compile/luau_norefunwindsafe.rs:7:18
  |
7 |     catch_unwind(|| lua.create_table().unwrap());
  |     ------------ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `UnsafeCell<bool>` may contain interior mutability and a reference may not be safely transferable across a catch_unwind boundary
  |     |
  |     required by a bound introduced by this call
  |
  = help: within `Cell<bool>`, the trait `RefUnwindSafe` is not implemented for `UnsafeCell<bool>`
note: required because it appears within the type `Cell<bool>`
 --> $RUST/core/src/cell.rs
  |
  | pub struct Cell<T: ?Sized> {
  |            ^^^^
  = note: required for `Rc<Cell<bool>>` to implement `RefUnwindSafe`
note: required because it appears within the type `Luau`
 --> src/state/mod.rs
  |
  | pub struct Luau {
  |            ^^^^
  = note: required for `&Luau` to implement `UnwindSafe`
note: required because it's used within this closure
 --> tests/compile/luau_norefunwindsafe.rs:7:18
  |
7 |     catch_unwind(|| lua.create_table().unwrap());
  |                  ^^
note: required by a bound in `std::panic::catch_unwind`
 --> $RUST/std/src/panic.rs
  |
  | pub fn catch_unwind<F: FnOnce() -> R + UnwindSafe, R>(f: F) -> Result<R> {
  |                                        ^^^^^^^^^^ required by this bound in `catch_unwind`

error[E0277]: the type `UnsafeCell<*mut ruau_sys::luau::lua::lua_State>` may contain interior mutability and a reference may not be safely transferable across a catch_unwind boundary
 --> tests/compile/luau_norefunwindsafe.rs:7:18
  |
7 |     catch_unwind(|| lua.create_table().unwrap());
  |     ------------ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `UnsafeCell<*mut ruau_sys::luau::lua::lua_State>` may contain interior mutability and a reference may not be safely transferable across a catch_unwind boundary
  |     |
  |     required by a bound introduced by this call
  |
  = help: within `Luau`, the trait `RefUnwindSafe` is not implemented for `UnsafeCell<*mut ruau_sys::luau::lua::lua_State>`
note: required because it appears within the type `Cell<*mut ruau_sys::luau::lua::lua_State>`
 --> $RUST/core/src/cell.rs
  |
  | pub struct Cell<T: ?Sized> {
  |            ^^^^
note: required because it appears within the type `ruau::state::raw::RawLuau`
 --> src/state/raw.rs
  |
  | pub struct RawLuau {
  |            ^^^^^^^
  = note: required because it appears within the type `*const ruau::state::raw::RawLuau`
note: required because it appears within the type `NonNull<ruau::state::raw::RawLuau>`
 --> $RUST/core/src/ptr/non_null.rs
  |
  | pub struct NonNull<T: PointeeSized> {
  |            ^^^^^^^
note: required because it appears within the type `Luau`
 --> src/state/mod.rs
  |
  | pub struct Luau {
  |            ^^^^
  = note: required for `&Luau` to implement `UnwindSafe`
note: required because it's used within this closure
 --> tests/compile/luau_norefunwindsafe.rs:7:18
  |
7 |     catch_unwind(|| lua.create_table().unwrap());
  |                  ^^
note: required by a bound in `std::panic::catch_unwind`
 --> $RUST/std/src/panic.rs
  |
  | pub fn catch_unwind<F: FnOnce() -> R + UnwindSafe, R>(f: F) -> Result<R> {
  |                                        ^^^^^^^^^^ required by this bound in `catch_unwind`

error[E0277]: the type `UnsafeCell<ruau::state::extra::ExtraData>` may contain interior mutability and a reference may not be safely transferable across a catch_unwind boundary
 --> tests/compile/luau_norefunwindsafe.rs:7:18
  |
7 |     catch_unwind(|| lua.create_table().unwrap());
  |     ------------ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `UnsafeCell<ruau::state::extra::ExtraData>` may contain interior mutability and a reference may not be safely transferable across a catch_unwind boundary
  |     |
  |     required by a bound introduced by this call
  |
  = help: the trait `RefUnwindSafe` is not implemented for `UnsafeCell<ruau::state::extra::ExtraData>`
  = note: required for `Rc<UnsafeCell<ruau::state::extra::ExtraData>>` to implement `RefUnwindSafe`
note: required because it appears within the type `ruau::state::raw::RawLuau`
 --> src/state/raw.rs
  |
  | pub struct RawLuau {
  |            ^^^^^^^
  = note: required because it appears within the type `*const ruau::state::raw::RawLuau`
note: required because it appears within the type `NonNull<ruau::state::raw::RawLuau>`
 --> $RUST/core/src/ptr/non_null.rs
  |
  | pub struct NonNull<T: PointeeSized> {
  |            ^^^^^^^
note: required because it appears within the type `Luau`
 --> src/state/mod.rs
  |
  | pub struct Luau {
  |            ^^^^
  = note: required for `&Luau` to implement `UnwindSafe`
note: required because it's used within this closure
 --> tests/compile/luau_norefunwindsafe.rs:7:18
  |
7 |     catch_unwind(|| lua.create_table().unwrap());
  |                  ^^
note: required by a bound in `std::panic::catch_unwind`
 --> $RUST/std/src/panic.rs
  |
  | pub fn catch_unwind<F: FnOnce() -> R + UnwindSafe, R>(f: F) -> Result<R> {
  |                                        ^^^^^^^^^^ required by this bound in `catch_unwind`
